[package]
name = "snmptools"
version = "0.0.7"
edition = "2021"
authors = ["Sergei S. <div@altertech.com>"]
license = "Apache-2.0"
description = "SNMP common tools"
repository = "https://github.com/alttch/snmptools"
readme = "README.md"
keywords = ["snmp", "mib", "tools"]

[package.metadata.docs.rs]
features = ["static"]

[package.metadata.playground]
features = ["static"]

[lib]
name = "snmptools"
path = "src/lib.rs"

[dependencies]
der-parser = { version = "6.0.0", features = ["bigint"] }
netsnmp-sys = { version = "0.1.1", optional = true }
libloading = { version = "0.7.3", optional = true }
once_cell = { version = "1.12.0", optional = true }

[features]
dynamic = ["libloading", "once_cell"]
static = ["netsnmp-sys"]
