[package]
name = "snmptools"
version = "0.1.2"
edition = "2021"
authors = ["Sergei S. <div@altertech.com>"]
license = "Apache-2.0"
description = "SNMP common tools"
repository = "https://github.com/alttch/snmptools"
readme = "README.md"
keywords = ["snmp", "mib", "tools"]

[package.metadata.docs.rs]
features = ["static"]

[package.metadata.playground]
features = ["static"]

[lib]
name = "snmptools"
path = "src/lib.rs"

[dependencies]
der-parser = { version = "9", features = ["bigint"] }
netsnmp-sys-nocrypto = { version = "0.1.3", optional = true }
libloading = { version = "0.8", optional = true }
once_cell = { version = "1.20", optional = true }

[features]
default = ["static"]
static = ["netsnmp-sys-nocrypto"]
dynamic = ["libloading", "once_cell"]
